modify function name

--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -20,7 +20,7 @@
                 </form>
                 <nav class="nav-links">
                     <a href="{{ url_for('index') }}" class="active">Live Feed</a>
-                    <a href="{{ url_for('spells') }}">Spells</a>
+                    <a href="{{ url_for('spells_view') }}">Spells</a>
                 </nav>
             </div>
         </header>
