--- a/web-app/templates/spells.html
+++ b/web-app/templates/spells.html
@@ -20,7 +20,7 @@
                 </form>
                 <nav class="nav-links">
                     <a href="{{ url_for('index') }}">Live Feed</a>
-                    <a href="{{ url_for('spells') }}" class="active">Spells</a>
+                    <a href="{{ url_for('spells_view') }}" class="active">Spells</a>
                 </nav>
             </div>
         </header>
