--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -21,8 +21,14 @@
                     <button type="submit">Search</button>
                 </form>
                 <nav class="nav-links">
-
                     <a href="{{ url_for('spells_view') }}">Spells</a>
+                    {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('profile') }}">Profile</a>
+                        <a href="{{ url_for('logout') }}">Logout</a>
+                    {% else %}
+                        <a href="{{ url_for('login') }}">Login</a>
+                        <a href="{{ url_for('register') }}">Register</a>
+                    {% endif %}
                 </nav>
             </div>
         </header>
