--- a/web_app/templates/spells.html
+++ b/web_app/templates/spells.html
@@ -26,6 +26,13 @@
 
                 <nav class="nav-links">
                     <a href="{{ url_for('spells_view') }}" class="active">Spells</a>
+                    {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('profile') }}">Profile</a>
+                        <a href="{{ url_for('logout') }}">Logout</a>
+                    {% else %}
+                        <a href="{{ url_for('login') }}">Login</a>
+                        <a href="{{ url_for('register') }}">Register</a>
+                    {% endif %}
                 </nav>
             </div>
         </header>
